# Personal-Manuscript-Archive

./: .gitignore  README.md  README_zh.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: build_exe.bat  run_dev.bat
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: archive.rs  lib.rs  main.rs
src/components/: ArchiveSelector.tsx  CreateEntryDialog.tsx  EditorPane.tsx  NavigationPane.tsx  PdfViewerPane.tsx  ResourceImportDialog.tsx
src/hooks/: useDebouncedEffect.ts
src/i18n/: I18nProvider.tsx  translations.ts
src/lib/: api.ts  utils.ts
