[package]
name = "personal-manuscript-archive"
version = "0.1.0"
description = "Local archive GUI for personal manuscript materials"
authors = ["Codex"]
edition = "2021"

[lib]
name = "personal_manuscript_archive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
lopdf = "0.34"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.7.0"
thiserror = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
